--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -114,7 +114,7 @@
               <ul class="dropdown-menu shadow rounded-3" aria-labelledby="perfilDropdown">
                 <li><a class="dropdown-item" href="{% url 'profile' %}">Meu Perfil</a></li>
                 <li><a class="dropdown-item" href="#">Meus Pedidos</a></li>
-                <li><a class="dropdown-item" href="#">Alterar Senha</a></li>
+                <li><a class="dropdown-item" href="{% url 'password_reset' %}">Alterar Senha</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
