--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -60,7 +60,7 @@
 
                     <!-- Links extras -->
                     <div class="d-flex justify-content-between align-items-center mt-3">
-                        <a href="{% url 'my_password_reset' %}" class="small text-decoration-none">Esqueceu a senha?</a>
+                        <a href="{% url 'password_reset' %}" class="small text-decoration-none">Esqueceu a senha?</a>
                         <small class="text-muted">
                             Novo por aqui?
                             <a href="{% url 'custom_registration' %}" class="text-decoration-none fw-semibold">
