atualizar a quantiade de produtos na carrinha

--- a/templates/meteoro/productdetail.html
+++ b/templates/meteoro/productdetail.html
@@ -71,14 +71,14 @@
                         Adicionar ao Carrinho
                     </button>
                 </form>
-
+ 
                 <!-- Go to Cart -->
                 <a href="{% url 'cart' %}" class="btn btn-dark btn-lg w-100 w-sm-auto">
                     Ver Carrinho
                 </a>
 
                 <!-- Checkout direto -->
-                <a href="{% url 'checkout' %}" class="btn btn-success btn-lg w-100 w-sm-auto">
+                <a href="{% url 'profile' %}" class="btn btn-success btn-lg w-100 w-sm-auto">
                     Finalizar Compra
                 </a>
             </div>
