--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="{% static '/css/owl.carousel.min.css' %}">
   <link rel="stylesheet" href="{% static '/css/all.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 
 <body>
@@ -191,9 +192,9 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
 
-  <script src="{% static '/js/owl.carousel.min.js' %}"></script>
-  <script src="{% static '/js/all.js' %}"></script>
-  <script src="{% static '/js/myscript.js' %}"></script>
+  <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+  <script src="{% static 'js/all.js' %}"></script>
+  <script src="{% static 'js/myscript.js' %}"></script>
 </body>
 
 </html>
